<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen">

    <ImageView
        android:id="@+id/IVBubbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bubble"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/TVLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="196dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETLoginEmail"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/ETLoginPassword"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="365dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="313dp"
        android:layout_height="55dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="515dp"
        android:background="@drawable/button_style"/>

</androidx.constraintlayout.widget.ConstraintLayout>